src/examples/errors/15_logical_on_int.veri
// Error: Logical operators on integers
// Expected error: E001 - Type mismatch (expected bool)

fn main() {
    let a: int = 5;
    let b: int = 10;
    let c: bool = a && b;
}
